--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -16,68 +16,68 @@
 			<button
 					type="button"
 					class="search-clear"
-					aria-label="검색어 지우기"
 					onclick="const i=document.querySelector('.search-input'); i.value=''; i.focus(); this.style.display='none';">
-				<i>검색어 삭제</i>
+				<i>검색어 지우기</i>
 			</button>
 			<button type="button" class="search-button">검색하기</button>
 		</div>
 		<div class="search-list">
-			<dl class="recent-search-words-list">
-				<dt>최근 검색어</dt>
-				<dd class="list">
-					<p class="recent-search-words-list-item">
+			<div aria-labelledby="recent-search-heading">
+				<strong id="recent-search-heading">최근 검색어</strong>
+				<ul class="recent-search-words-list">
+					<li class="recent-search-words-list-item">
 						<span>올리브영</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>문화상품권</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>mac</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>로션</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>스킨</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>문화상품권</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>타이어 후드</span>
 						<button type="button">검색어 삭제</button>
-					</p>
-					<p class="recent-search-words-list-item">
+					</li>
+					<li class="recent-search-words-list-item">
 						<span>직관 티켓</span>
 						<button type="button">검색어 삭제</button>
-					</p>
+					</li>
 					<button type="button">모두 지우기</button>
 
 					{#-<p class="empty">
 						최근 검색어가 없습니다.
 					</p>#}
-				</dd>
-			</dl>
-			<dl class="popular-search-word-list">
-				<dt>인기 검색어</dt>
-				<dd class="list">
-					<p class="popular-search-word-list-item">문화상품권</p>
-					<p class="popular-search-word-list-item">타이어 후드</p>
-					<p class="popular-search-word-list-item">스킨</p>
-					<p class="popular-search-word-list-item">올리브영</p>
-					<p class="popular-search-word-list-item">로션</p>
-					<p class="popular-search-word-list-item">직관 티켓</p>
-					<p class="popular-search-word-list-item">올리브영</p>
-					<p class="popular-search-word-list-item">mac</p>
-				</dd>
-			</dl>
+				</ul>
+			</div>
+			<div aria-labelledby="popular-search-heading">
+				<strong id="popular-search-heading">인기 검색어</strong>
+				<ol class="popular-search-word-list">
+					<li class="popular-search-word-list-item">문화상품권</li>
+					<li class="popular-search-word-list-item">타이어 후드</li>
+					<li class="popular-search-word-list-item">스킨</li>
+					<li class="popular-search-word-list-item">올리브영</li>
+					<li class="popular-search-word-list-item">로션</li>
+					<li class="popular-search-word-list-item">직관 티켓</li>
+					<li class="popular-search-word-list-item">올리브영</li>
+					<li class="popular-search-word-list-item">mac</li>
+				</ol>
+			</div>
 		</div>
 	</div>
+
 {%- endblock %}
