--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -53,16 +53,21 @@
 						<button type="button" class="recent-search-word">타이어 후드</button>
 						<button type="button" class="recent-search-word-delete x-button"><i>검색어 삭제</i></button>
 					</li>
+
+
+
 					<li class="recent-search-words-list-item">
 						<button type="button" class="recent-search-word">직관 티켓</button>
 						<button type="button" class="recent-search-word-delete x-button"><i>검색어 삭제</i></button>
 					</li>
+
 
 					<button type="button">모두 지우기</button>
 
 					{#-<p class="empty">
 						최근 검색어가 없습니다.
 					</p>#}
+
 				</ul>
 			</div>
 			<div class="list-box" aria-labelledby="popular-search-heading">
@@ -96,6 +101,7 @@
 			</div>
 		</div>
 	</div>
+	<p class="test">텍스트</p>
 
 
 {%- endblock %}
