--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -5,7 +5,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video
-{margin:0; padding:0; border:0; vertical-align:top; box-sizing:border-box; word-break:keep-all; @include font-kr;}
+{margin:0; padding:0; border:0; vertical-align:top; box-sizing:border-box; word-break:keep-all;}
 *:before, *:after {box-sizing:border-box;}
 
 /* HTML5 display-role reset for older browsers */
@@ -18,7 +18,7 @@ table {border-collapse:collapse; border-spacing:0;}
 a {text-decoration:none;}
 i, em ,address {font-style:normal;}
 img {max-width:100%; height:auto; border:0; vertical-align:top;}
-button {margin:0; padding:0; border:0; background:none; cursor:pointer; @include font-kr;}
+button {margin:0; padding:0; border:0; background:none; cursor:pointer;}
 textarea {vertical-align:top;}
 
 /* 아이폰 가로모드 텍스트 크기 조정 */
